syntax = "proto3";

package vpn;

message DomainAddr {
  string domain = 1;
  uint32 port = 2;
}

message DestinationAddr {
  oneof addr {
    string v4 = 1;
    string v6 = 2;
    DomainAddr domain = 3;
  }
}

message TcpConnect {
  DestinationAddr destination = 1;
  uint32 id = 2;
}

message CommandRequest {
  oneof command {
      TcpConnect tcp_connect = 2;
      bytes data = 3;
      uint32 close_port = 4;
  }
}

message CommandResponse {
  oneof response {
      bytes data = 3;
  }
}
